--- a/HTML/STAY.html
+++ b/HTML/STAY.html
@@ -4,13 +4,17 @@
     <title>STAY - The Kid LAROI, Justin Bieber</title>
     <meta charset="utf-8">  
     <style>
+        .big-text {
+            font-size: 64px;
+        }
+
         .centered_text {
             text-align: center;
         }
 
-      h1 {
-        font-size: 64px;
-      }
+        #title_text {
+            color: navy
+        }
 
       h3 {
         margin-top: 50px;
@@ -30,7 +34,7 @@
   </head>
   
   <body>
-    <h1 class="centered_text">STAY</h1>
+    <h1 class="centered_text big-text" id="title_text">STAY</h1>
     <h2 class="centered_text">The Kid LAROI, <i>Justin Bieber</i></h2>
     
     <img src="https://w.namu.la/s/70650b4712040c4d14a86476040aaa68958e7384a3704eede990e5b4c0694327df6c951b1eb4ca10a3c13c7b1ee54f7e6bf5e94645f40abd19dfde24b39d582b2db966f72861c8de05025ac04eaf25ad5fbe19f46ace7b343e3ca91a4df202d8" width=50%>
