--- a/HTML/Melon My Chart.html
+++ b/HTML/Melon My Chart.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>My Chart</h1>
-        <h3>2022.01.02 ~ 2022.02.02</h3>
+        <h3 style="color: grey;">2022.01.02 ~ 2022.02.02</h3>
 
         <div>
             <div class="music">
