--- a/HTML/travel_website/paris.html
+++ b/HTML/travel_website/paris.html
@@ -3,21 +3,18 @@
 <head>
   <title>Travel Website</title>
   <meta charset="utf-8">
-  <link href="styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>
-    <img class="logo" src="images/logo.png">
-  </h1>
+    <img id="logo" src="images/logo.png">
     <div id="menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#"><strong>Paris</strong></a></li>
-        <li><a href="seoul.html">Seoul</a></li>
-        <li><a href="tokyo.html">Tokyo</a></li>
-      </ul>
-    <div>
-      <img class="siteimg" src="images/paris.png">
+      <a href="index.html">Home</a>
+      <a href="#"><b>Paris</b></a>
+      <a href="seoul.html">Seoul</a>
+      <a href="tokyo.html">Tokyo</a>
+    </div>
+    <div id="siteimg">
+      <img src="images/paris.png">
     </div>
   </div>
 </body>
