--- a/HTML/travel_website/seoul.html
+++ b/HTML/travel_website/seoul.html
@@ -3,23 +3,18 @@
 <head>
   <title>Travel Website</title>
   <meta charset="utf-8">
-  <link href="styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>
-    <img class="logo" src="images/logo.png">
-  </h1>
-  <div>
-    <div class="menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="paris.html">Paris</a></li>
-        <li><a href="#"><strong>Seoul</strong></a></li>
-        <li><a href="tokyo.html">Tokyo</a></li>
-      </ul>
+    <img id="logo" src="images/logo.png">
+    <div id="menu">
+      <a href="index.html">Home</a>
+      <a href="paris.html">Paris</a>
+      <a href="#"><b>Seoul</b></a>
+      <a href="tokyo.html">Tokyo</a>
     </div>
-    <div>
-      <img class="siteimg" src="images/seoul.png">
+    <div id="siteimg">
+      <img src="images/seoul.png">
     </div>
   </div>
 </body>
