--- a/HTML/travel_website/index.html
+++ b/HTML/travel_website/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Travel Website</title>
   <meta charset="utf-8">
-  <link href="styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <img id="logo" src="images/logo.png">
