--- a/HTML/bluetooth_speaker/index.html
+++ b/HTML/bluetooth_speaker/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>IN'O</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-</head>
+    <head>
+    <title>IN'O</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    </head>
 
-<body>
-  <div class="header">
-    IN'O
-  </div>
-  <div class="hero-header"></div>
-  <div class="info">
-    <h2>Portfolio</h2>
-    <h3>Make Hadrware Soft</h3>
-    <p>IN'O is a hanger-type bluetooth speaker thah does not merely focus on its audio features. It naturally blends into your life through lean UX and minimal design.</audio></p>
-  </div>
-  <div class="img1"></div>
-  <div class="img2">
-    <div class="view-more">
-      <a href="#">VIEW MORE</a>
-    </div>
-  </div>
-  <div class="img3"></div>
-</body>
+    <body>
+        <div class="navbar col">
+            <span class="logo">IN'O</span>
+        </div>
+        <div class="banner col"></div>
+        <div class="info col">
+            <div class="helper"></div><div class="info-container">
+                <div class="label">Portfolio</div>
+                <h2>Make Hardware Soft</h2>
+                <p>IN'O is a hanger-type bluetooth speaker that does not merely focus on its audito features. It naturally blends into your life through lean UX and minimal design.</p>
+            </div>
+        </div>
+        <div class="div-img1 col"></div>
+        <div class="div-img2 col"></div>
+        <div class="div-img3 col"></div>
+    </body>
+
 </html>
