--- a/HTML/share_skill/index.html
+++ b/HTML/share_skill/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">SHARESKILL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,23 +20,21 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">튜터신청 <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">튜터 신청</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">수업목록</a>
+          <a class="nav-link" href="#">수업 목록</a>
         </li>
-        <li class="nav-item dropdown"></li>
-        <li class="nav-item"></li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-    <ul id="nav-menu">
-      <li><a href="#">회원가입</a></li>
-      <li><a href="#">로그인</a></li>
-    </ul>
-        <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-      </form>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">회원가입</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">로그인</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -47,34 +45,26 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-
-
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div id="fst-banner" class="d-block w-100" alt="First slide">
-          <div class="helper" style="color:white"></div><div class="banner-info">
-            <h2>음악 배워보세요</h2>
-            <p>멋진 뮤지션들이 주변에 있습니다.</p>
-            <button><a href="#">수업찾기</a></button>
-          </div>
+      <div class="carousel-item item1 active">
+        <div class="helper"></div><div class="intro">
+          <h2>음악 배워보세요</h2>
+          <h3>멋집 뮤지션들이 주변에 있습니다.</h3>
+          <a href="#">수업 찾기</a>
         </div>
       </div>
-      <div class="carousel-item">
-        <div id="snd-banner" class="d-block w-100" alt="Second slide">
-          <div class="helper" style="color:white"></div><div class="banner-info">
-            <h2>메이크업 배워보세요</h2>
-            <p>멋진 메이크업 아티스트들이 주변에 있습니다.</p>
-            <button><a href="#">수업찾기</a></button>
-          </div>
+      <div class="carousel-item item2">
+        <div class="helper"></div><div class="intro">
+          <h2>메이크업 배워보세요</h2>
+          <h3>멋집 메이크업 아티스트들이 주변에 있습니다.</h3>
+          <a href="#">수업 찾기</a>
         </div>
       </div>
-      <div class="carousel-item">
-        <div id="thd-banner"  class="d-block w-100"alt="Third slide">
-          <div class="helper" style="color:white"></div><div class="banner-info">
-            <h2>요리 배워보세요</h2>
-            <p>멋진 요리사들이 주변에 있습니다.</p>
-            <button><a href="#">수업찾기</a></button>
-          </div>
+      <div class="carousel-item item3">
+        <div class="helper"></div><div class="intro">
+          <h2>요리 배워보세요</h2>
+          <h3>멋집 요리사들이 주변에 있습니다.</h3>
+          <a href="#">수업 찾기</a>
         </div>
       </div>
     </div>
@@ -88,104 +78,117 @@
     </a>
   </div>
 
-  <!-- grid -->
-  <div class="container">
-    <div class="row">
-      <!-- alert -->
-      <div class="col-12">
-        <div id="carousel-below-alert" class="alert alert-warning alert-dismissible fade show" role="alert">
-          <strong>튜터 모집!</strong> 재능을 나누어봐요.
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      </div>
-      <!-- course -->
-      <div class="course-margin"></div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course1.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>개성있는 일러스트 작품 만들기</h4>
-            <div class="user">
-              <img src="images/user.png" width="20px" height="20px">
-              <span>문종모</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course2.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>내가 만드는 나만의 악세서리</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>하지은</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course3.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>내 이야기를 노래로!</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>김신의</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course4.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>비전공자를 위한 웹 프로그래밍</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>손동욱</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course5.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>자신감 업! 메이크업 클래스</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>강귀영</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course6.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>아이돌 댄스 정복하기</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>박윤석</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course7.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>사진 작가에게 배우는 야외 사진</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>이윤수</span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="course">
-          <img src="images/course8.jpg" width="255px" height="100%">
-          <div class="course-info">
-            <h4>기본부터 익히는 플라워 클래스</h4>
-            <img src="images/user.png" width="20px" height="20px">
-            <span>서혜린</span>
-          </div>
-        </div>
+<!-- grid -->
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>튜터 모집!</strong> 재능을 나누어봐요.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course1.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>개성있는 일러스트 작품 만들기</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">문종모</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course2.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>내가 만드는 나만의 악세서리</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">하지은</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course3.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>내 이야기를 노래로!</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">김신의</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course4.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>비전공자를 위한 웹 프로그래밍</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">손동욱</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course5.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>자신감 업! 메이크업 클래스</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">황민연</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course6.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>아이돌 댄스 정복하기</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">박윤석</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course7.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>사진 작가에게 배우는 야외 사진</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">이윤수수</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <a href="#" class="course">
+        <img src="images/course8.jpg" width=100% class="course-img">
+
+        <div class="info">
+          <h4>기본부터 익히는 플라워 클래스</h4>
+          <div class="lecturer">
+            <img src="images/user.png" width="20" height="20"> <span class="name">서혜린</span>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
