--- a/React/rockpaperscissors/public/index.html
+++ b/React/rockpaperscissors/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React App</title>
+  <title>가위 바위 보</title>
   <style>
   body {
     background-color: #40089a;
