--- a/React/mbti/public/index.html
+++ b/React/mbti/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css"
+    />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
     <title>MBTI별 좋아하는 컬러</title>
